# go/model_data_metadata.go
@@ -1,19 +1,0 @@
-/*
- * OpenLattice API
- *
- * OpenLattice API
- *
- * API version: 0.0.1
- * Contact: support@openlattice.com
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openlattice
-// DataMetadata struct for DataMetadata
-type DataMetadata struct {
-	Title string `json:"title,omitempty"`
-	Description string `json:"description,omitempty"`
-	Contacts []string `json:"contacts,omitempty"`
-	Flags []string `json:"flags,omitempty"`
-	Metadata []string `json:"metadata,omitempty"`
-}
