# go/model_securable_object_metadata_update.go
@@ -1,0 +1,19 @@
+/*
+ * OpenLattice API
+ *
+ * OpenLattice API
+ *
+ * API version: 0.0.1
+ * Contact: support@openlattice.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openlattice
+// SecurableObjectMetadataUpdate struct for SecurableObjectMetadataUpdate
+type SecurableObjectMetadataUpdate struct {
+	Title string `json:"title,omitempty"`
+	Description string `json:"description,omitempty"`
+	Contacts []string `json:"contacts,omitempty"`
+	Flags []string `json:"flags,omitempty"`
+	Metadata []string `json:"metadata,omitempty"`
+}
